Fix `.sidebar` flicker/jump when hovered - Close #583

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -7,6 +7,9 @@
    ========================================================================== */
 
 .sidebar {
+  -webkit-transform: translate3d(0, 0 , 0);
+          transform: translate3d(0, 0 , 0);
+
   @include clearfix();
   margin-bottom: 1em;
 
@@ -14,7 +17,7 @@
     @include span(2 of 12);
     opacity: 0.75;
     -webkit-transition: opacity 0.2s ease-in-out;
-    transition: opacity 0.2s ease-in-out;
+            transition: opacity 0.2s ease-in-out;
 
     &:hover {
       opacity: 1;
